Cleanup and fix username in drone pipeline.